force-app/main/default/objects/Quote_Soojung__c/Quote_Soojung__c.object-meta.xml
<CustomObject>
    <label>Quote_Soojung</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote_Soojung</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>