force-app/main/default/objects/Quote_Soojung__c/fields/Quntity__c.field-meta.xml
<CustomField>
    <fullName>Quntity__c</fullName>
    <label>Quntity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>